Updated site icon, and fixed CSS to collapse table border so that the table doesn't overflow

--- a/src/global.css
+++ b/src/global.css
@@ -5,3 +5,8 @@ input {
 .center {
     text-align: center;
 }
+
+.fullHeightScroll {
+    height: 100vh;
+    overflow-y: auto;
+}
