--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
-body {
-    padding: 5px
+* {
+    margin: 0;
+    padding: 0;
 }
